fix: text wrap at wallet trx history row

--- a/styles/components/_wallet-trx-history-row.scss
+++ b/styles/components/_wallet-trx-history-row.scss
@@ -5,6 +5,7 @@
   border-radius: 0.5rem;
   margin: 0 -0.5rem;
   padding: 0.5rem;
+  text-wrap: wrap;
 
   &:hover {
     background: var(--ui--hover-overlay);
